#00005954: Show group descriptions in side panel and dialogs if available

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/sidebar.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/sidebar.scss
@@ -209,6 +209,12 @@
 				margin-left: 10px;
 			}
 		}
+		.form-group ul{
+			padding-left: 10px;
+			li{
+				cursor: pointer;
+			}
+		}
 	}
 
 	#editor-panel-rtf {
