#00005970: Display problems in RTF tool panel

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
@@ -49,7 +49,7 @@
 
 		<script>
 			require(["jquery", "select2"], function($){
-				$("select").select2({width:"100%"})
+				$("#form-create-page select").select2({width:"100%"})
 			})
 		</script>
 		 
