--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/root.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/root.tml
@@ -113,7 +113,7 @@
 				S.forceReload();
 				WGA.ajax.callAction("<tml:action ref="$mc.createPage"/>");
 			})
-			$("select").select2({width:"100%"})
+			$("#form-create-page select").select2({width:"100%"})
 		})
 	</script>	
 </tml:form>	
