#00005979: Some Icons where not shown if OpenWGA is not installed as servlet root context

--- a/OpenWGA/plugins/cm-neo/design/tml/html/html.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/html.tml
@@ -29,7 +29,7 @@
 		</script>
 		
 		<link rel="stylesheet" href="<tml:url type="css" name="styles" u_v="{WGA.server().getVersion().toProjectVersion()}"/>">
-		<link rel="icon" href="/static/images/brand/icon_32.png"/>	
+		<link rel="icon" href="<tml:url type="static" file="images/brand/icon_32.png"/>"/>	
 		
 	</head>
 	
