--- a/OpenWGA/plugins/cm/design/scripts/css/bi-style-injection/cmm.scss
+++ b/OpenWGA/plugins/cm/design/scripts/css/bi-style-injection/cmm.scss
@@ -21,7 +21,7 @@
 	display: inline-block;
 	position: absolute;
 	right: 0px;
-	background: url("/plugin-wga-app-framework/file/icons/layout_content.png") no-repeat scroll 2px center silver;
+	background: url("../../plugin-wga-app-framework/file/icons/layout_content.png") no-repeat scroll 2px center silver;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
