--- a/OpenWGA/plugins/cm-neo/design/scripts/css/bi-style-injection/wga-item.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/bi-style-injection/wga-item.scss
@@ -33,8 +33,7 @@
 		padding: 3px;
 		margin: -4px;		// substracts 3px border and 1px padding.
 		img.womodo-img-selected{
-			margin: -1px;
-			border: solid gray 1px;
+			opacity: .8;
 		}
 		table td{
 			border: dotted silver 1px;
