#00005993: Improvements to dialog content-settings

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/settings/content.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/settings/content.tml
@@ -109,7 +109,7 @@
 						
 				<tml:if condition="tmlform.mode()=='edit'">
 					<tml:then>
-						<tml:[form-field] o_label="Inhalt verstecken in" o_type="checkbox" o_name="ishiddenfrom" o_meta="true"
+						<tml:[form-field] o_label="Inhalt verstecken in" o_type="checkbox" o_name="ishiddenfrom" o_meta="true" o_labeled="true"
 							o_options="Navigation|nav,Suche|search,Sitemap|sitemap"
 						/>
 					</tml:then>
