#00005994: Added custom dialogs to CM-Neo

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/sidebar.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/sidebar.scss
@@ -215,6 +215,11 @@
 				cursor: pointer;
 			}
 		}
+		ul.dialog-links{
+			list-style-type: none;
+			margin: 10px 0 15px;
+			padding: 0;
+		}
 	}
 
 	#editor-panel-rtf {
