--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/render.tml
@@ -58,16 +58,18 @@
 </div>
 <script>
 	require(["jquery", "jquery-modal"], function(){
-	
+		
 		$(document).off('click.<tml:option name="ns"/> modal-shown.<tml:option name="ns"/> modal-closed.<tml:option name="ns"/>')
 		
 		$(document).on('click.<tml:option name="ns"/>', "a[href='#<tml:[setting] o_name="id"/>']", function(e){
 			e.preventDefault();
 			if(!$(this).parents("[contenteditable]").length)
 				$.wga_modal.show(this.hash);
-		}).on({
-
-			"modal-shown.<tml:option name="ns"/>": function(ev, el){				
+		})
+		
+		$("#<tml:[setting] o_name="id"/>").on({
+			"modal-shown.<tml:option name="ns"/>": function(ev, el){
+			
 				if(el.id=="<tml:[setting] o_name="id"/>"){
 					WGA.event.fireEvent("overlay-loaded", "cmm", {id: "<tml:[setting] o_name="id"/>"})
 					WGA.event.fireEvent("CMM-element-activated", "CMM", {
