--- a/OpenWGA/plugins/cm-neo/design/scripts/css/sidebar.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/sidebar.scss
@@ -95,7 +95,9 @@
 					margin-top: 0;
 				}
 				.dropdown-menu > li > a{
+					padding: 6px 20px;
 					white-space: normal;
+					line-height: normal;
 				}
 				> a {
 					display: block;
